fixed canvas bug on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -911,7 +911,6 @@ textarea {
      left: 0;
      width: 100vw;
      height: 100vh;
-     min-height: -webkit-fill-available;
      pointer-events: none;
      z-index: -1;
    }
